Optimize deployment to use package installation as preferred method
- Update deploy-local.sh to prefer package installation over direct metadata deployment
- Add .package-version file support for automatic package deployment
- Update GitHub Actions workflow to support package installation
- Add .package-version.example file with instructions
- Update README with package deployment documentation
- Package installation is faster, more reliable, and better for production

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ $RECYCLE.BIN/
 # Local environment variables
 .env
 
+# Package version (optional - can be committed for team use)
+# Uncomment to ignore .package-version file:
+# .package-version
+
 # Python Salesforce Functions
 **/__pycache__/
 **/.venv/
