--- a/.github/workflows/deploy-with-login.yml
+++ b/.github/workflows/deploy-with-login.yml
@@ -263,6 +263,55 @@ jobs:
           echo "  Org ID: $ORG_ID"
           echo ""
           
+          # Check for package version file (preferred deployment method)
+          PACKAGE_VERSION_FILE=".package-version"
+          PACKAGE_VERSION=""
+          
+          if [ -f "$PACKAGE_VERSION_FILE" ]; then
+            PACKAGE_VERSION=$(grep -v '^#' "$PACKAGE_VERSION_FILE" | grep -v '^$' | head -1 | xargs)
+            if [ -n "$PACKAGE_VERSION" ]; then
+              echo "[$(date '+%Y-%m-%d %H:%M:%S')] ✅ Found package version: $PACKAGE_VERSION"
+              echo "[$(date '+%Y-%m-%d %H:%M:%S')] Using package installation (faster and more reliable)"
+              echo ""
+              
+              # Check if package is already installed
+              INSTALLED_CHECK=$(sf package installed list --target-org targetOrg --json 2>/dev/null || echo "{}")
+              IS_INSTALLED=$(echo "$INSTALLED_CHECK" | jq -r ".result[]? | select(.SubscriberPackageVersionId == \"$PACKAGE_VERSION\") | .SubscriberPackageVersionId" 2>/dev/null || echo "")
+              
+              if [ -n "$IS_INSTALLED" ]; then
+                echo "[$(date '+%Y-%m-%d %H:%M:%S')] ✅ Package version already installed"
+                echo "[$(date '+%Y-%m-%d %H:%M:%S')] Deployment complete (package already installed)"
+                exit 0
+              fi
+              
+              # Install the package
+              echo "[$(date '+%Y-%m-%d %H:%M:%S')] Installing package version..."
+              DEPLOY_OUTPUT=$(sf package install --package "$PACKAGE_VERSION" --target-org targetOrg --wait 10 --no-prompt 2>&1)
+              DEPLOY_EXIT_CODE=$?
+              
+              if [ $DEPLOY_EXIT_CODE -eq 0 ]; then
+                echo ""
+                echo "[$(date '+%Y-%m-%d %H:%M:%S')] ✅ Package installed successfully!"
+                echo ""
+                echo "Deployment output:"
+                echo "$DEPLOY_OUTPUT"
+                exit 0
+              else
+                echo ""
+                echo "[$(date '+%Y-%m-%d %H:%M:%S')] ⚠️  Package installation failed (exit code: $DEPLOY_EXIT_CODE)"
+                echo "Falling back to direct metadata deployment..."
+                echo ""
+                echo "Deployment output:"
+                echo "$DEPLOY_OUTPUT"
+                echo ""
+              fi
+            fi
+          fi
+          
+          # Fallback to direct metadata deployment
+          echo "[$(date '+%Y-%m-%d %H:%M:%S')] Using direct metadata deployment"
+          echo ""
+          
           # Check what we're deploying
           echo "[$(date '+%Y-%m-%d %H:%M:%S')] Checking deployment source..."
           if [ ! -d "force-app" ]; then
@@ -278,8 +327,8 @@ jobs:
           find force-app -type f | head -20 || echo "No files found"
           echo ""
           
-          # This runs as soon as you finish the login on your machine
-          echo "[$(date '+%Y-%m-%d %H:%M:%S')] Starting deployment..."
+          # Deploy metadata directly
+          echo "[$(date '+%Y-%m-%d %H:%M:%S')] Starting metadata deployment..."
           echo "Command: sf project deploy start --source-dir force-app --target-org targetOrg --wait 10"
           echo ""
           
@@ -292,6 +341,11 @@ jobs:
             echo ""
             echo "Deployment output:"
             echo "$DEPLOY_OUTPUT"
+            echo ""
+            echo "💡 Tip: For faster deployments, create a package and use package installation:"
+            echo "  1. Create package: ./create-package.sh -a devhub-org"
+            echo "  2. Save version ID to .package-version file"
+            echo "  3. Future deployments will use package installation automatically"
           else
             echo ""
             echo "[$(date '+%Y-%m-%d %H:%M:%S')] ❌ Deployment failed (exit code: $DEPLOY_EXIT_CODE)"
